crates/runtime/benches/snapshots/bench__postgres_tpcds_q83.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+------------------+-------------+--------------------+-------------+--------------------+-------------+--------------------+--------------------+
| item_id          | sr_item_qty | sr_dev             | cr_item_qty | cr_dev             | wr_item_qty | wr_dev             | average            |
+------------------+-------------+--------------------+-------------+--------------------+-------------+--------------------+--------------------+
| AAAAAAAAANPDAAAA | 3           | 3.571428571428571  | 22          | 26.190476190476193 | 3           | 3.571428571428571  | 9.333333333333334  |
| AAAAAAAABCGEAAAA | 6           | 5.405405405405405  | 20          | 18.01801801801802  | 11          | 9.90990990990991   | 12.333333333333334 |
| AAAAAAAABDDAAAAA | 15          | 7.352941176470589  | 33          | 16.176470588235293 | 20          | 9.803921568627452  | 22.666666666666668 |
| AAAAAAAACEPBAAAA | 16          | 6.349206349206349  | 8           | 3.1746031746031744 | 60          | 23.80952380952381  | 28.0               |
| AAAAAAAACJACAAAA | 28          | 21.21212121212121  | 12          | 9.09090909090909   | 4           | 3.0303030303030303 | 14.666666666666666 |
| AAAAAAAACKBEAAAA | 19          | 8.11965811965812   | 35          | 14.957264957264957 | 24          | 10.256410256410257 | 26.0               |
| AAAAAAAADBGDAAAA | 22          | 4.793028322440087  | 68          | 14.814814814814813 | 63          | 13.72549019607843  | 51.0               |
| AAAAAAAADBPDAAAA | 9           | 23.076923076923077 | 2           | 5.128205128205129  | 2           | 5.128205128205129  | 4.333333333333333  |
| AAAAAAAADEFBAAAA | 21          | 4.45859872611465   | 92          | 19.532908704883226 | 44          | 9.341825902335456  | 52.333333333333336 |
| AAAAAAAADKAAAAAA | 2           | 0.8333333333333334 | 52          | 21.666666666666668 | 26          | 10.833333333333334 | 26.666666666666668 |
+------------------+-------------+--------------------+-------------+--------------------+-------------+--------------------+--------------------+
