crates/runtime/benches/snapshots/bench__postgres_tpcds_q84.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+------------------+--------------------+
| customer_id      | customername       |
+------------------+--------------------+
| AAAAAAAAAENGBAAA | Chavez, Allyson    |
| AAAAAAAABLEPAAAA | Morris, Lorraine   |
| AAAAAAAADLECBAAA | Duffy, Meredith    |
| AAAAAAAAEFEBBAAA | Shepherd, Linda    |
| AAAAAAAAEFPDBAAA | Keeler, George     |
| AAAAAAAAEGPDAAAA | Garcia, Rose       |
| AAAAAAAAFFOGBAAA | Nadeau, Kristi     |
| AAAAAAAAGLFBAAAA | Hernandez, Darlene |
| AAAAAAAAIEPNAAAA | Wilder, Williams   |
| AAAAAAAAIGBPAAAA | Phillips, Sharon   |
+------------------+--------------------+
