crates/runtime/benches/snapshots/bench__postgres_tpcds_q86.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
snapshot_kind: text
---
+--------------+-------------+---------+--------------+--------------------+
| total_sum    | i_category  | i_class | lochierarchy | rank_within_parent |
+--------------+-------------+---------+--------------+--------------------+
| 324206838.56 |             |         | 2            | 1                  |
| 34047552.83  | Music       |         | 1            | 1                  |
| 32977226.88  | Shoes       |         | 1            | 2                  |
| 32698581.26  | Women       |         | 1            | 3                  |
| 32485912.51  | Books       |         | 1            | 4                  |
| 32483133.75  | Electronics |         | 1            | 5                  |
| 32139547.99  | Jewelry     |         | 1            | 6                  |
| 31956229.14  | Men         |         | 1            | 7                  |
| 31559180.07  | Sports      |         | 1            | 8                  |
| 31479977.33  | Children    |         | 1            | 9                  |
+--------------+-------------+---------+--------------+--------------------+
