crates/runtime/benches/snapshots/bench__postgres_tpcds_q9.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+-----------+------------+------------+------------+------------+
| bucket1   | bucket2    | bucket3    | bucket4    | bucket5    |
+-----------+------------+------------+------------+------------+
| 39.645413 | 115.898137 | 191.634713 | 267.187999 | 341.986914 |
+-----------+------------+------------+------------+------------+
