crates/runtime/benches/snapshots/bench__postgres_tpcds_q90.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+-------------+
| am_pm_ratio |
+-------------+
| 1.10411861  |
+-------------+
