crates/runtime/benches/snapshots/bench__postgres_tpcds_q93.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+----------------+----------+
| ss_customer_sk | sumsales |
+----------------+----------+
| 192            | 0.00     |
| 411            | 0.00     |
| 717            | 0.00     |
| 775            | 0.00     |
| 916            | 0.00     |
| 1441           | 0.00     |
| 1722           | 0.00     |
| 1804           | 0.00     |
| 2403           | 0.00     |
| 2652           | 0.00     |
+----------------+----------+
