crates/runtime/benches/snapshots/bench__postgres_tpcds_q95.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+-------------+---------------------+------------------+
| order count | total shipping cost | total net profit |
+-------------+---------------------+------------------+
| 0           |                     |                  |
+-------------+---------------------+------------------+
