crates/runtime/benches/snapshots/bench__postgres_tpcds_q96.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+----------+
| count(*) |
+----------+
| 949      |
+----------+
